Little refactoring.